// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with a claim only 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <span>
            Claim 1
          </span>
        </li>
        <li
          className="download"
        >
          <div
            id="download-btn-container"
          >
            <div />
            <a
              aria-label="Download"
              id="download-btn"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-cloud-download-alt fa-w-20 cloud"
                data-icon="cloud-download-alt"
                data-prefix="fas"
                role="img"
                style={Object {}}
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zm-132.9 88.7L299.3 420.7c-6.2 6.2-16.4 6.2-22.6 0L171.3 315.3c-10.1-10.1-2.9-27.3 11.3-27.3H248V176c0-8.8 7.2-16 16-16h48c8.8 0 16 7.2 16 16v112h65.4c14.2 0 21.4 17.2 11.3 27.3z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
            <div
              className="download-label"
            >
              Download
            </div>
            <style
              jsx={true}
            >
              
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 500px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
            </style>
          </div>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundImage: linear-gradient(90deg, #006298, #0085AD)
        width: '100%',
        flexBasis: '100%'
        flex-direction: row;
        justify-content: center;
        align-items:center;
      }

      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction:row;
        align-items: center;
        justify-content:space-evenly;
        list-style-type: none;
        max-width: 85%;
        width:100vw;
        margin: 0;
        padding: 0;
        }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width:auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with all data 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <span>
            Claim 1
          </span>
        </li>
        <li
          className="title"
        >
          <span>
            Target 1
          </span>
        </li>
        <li
          className="download"
        >
          <div
            id="download-btn-container"
          >
            <div />
            <a
              aria-label="Download"
              id="download-btn"
              onClick={[Function]}
              role="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-cloud-download-alt fa-w-20 cloud"
                data-icon="cloud-download-alt"
                data-prefix="fas"
                role="img"
                style={Object {}}
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zm-132.9 88.7L299.3 420.7c-6.2 6.2-16.4 6.2-22.6 0L171.3 315.3c-10.1-10.1-2.9-27.3 11.3-27.3H248V176c0-8.8 7.2-16 16-16h48c8.8 0 16 7.2 16 16v112h65.4c14.2 0 21.4 17.2 11.3 27.3z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
            <div
              className="download-label"
            >
              Download
            </div>
            <style
              jsx={true}
            >
              
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 500px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
            </style>
          </div>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundImage: linear-gradient(90deg, #006298, #0085AD)
        width: '100%',
        flexBasis: '100%'
        flex-direction: row;
        justify-content: center;
        align-items:center;
      }

      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction:row;
        align-items: center;
        justify-content:space-evenly;
        list-style-type: none;
        max-width: 85%;
        width:100vw;
        margin: 0;
        padding: 0;
        }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width:auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with header only 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <span>
            Claim 1
          </span>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundImage: linear-gradient(90deg, #006298, #0085AD)
        width: '100%',
        flexBasis: '100%'
        flex-direction: row;
        justify-content: center;
        align-items:center;
      }

      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction:row;
        align-items: center;
        justify-content:space-evenly;
        list-style-type: none;
        max-width: 85%;
        width:100vw;
        margin: 0;
        padding: 0;
        }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width:auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a download button 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      id="download-btn-container"
    >
      <div />
      <a
        aria-label="Download"
        id="download-btn"
        onClick={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-cloud-download-alt fa-w-20 cloud"
          data-icon="cloud-download-alt"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zm-132.9 88.7L299.3 420.7c-6.2 6.2-16.4 6.2-22.6 0L171.3 315.3c-10.1-10.1-2.9-27.3 11.3-27.3H248V176c0-8.8 7.2-16 16-16h48c8.8 0 16 7.2 16 16v112h65.4c14.2 0 21.4 17.2 11.3 27.3z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
      <div
        className="download-label"
      >
        Download
      </div>
      <style
        jsx={true}
      >
        
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 500px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
      </style>
    </div>
  </div>
</div>
`;
